# basefunctions

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_FIXES_SUMMARY.md  LICENSE  README.md  TEST_REPORT_EVENT_BUS_EDGE_CASES.md  coverage.json  postcreate.sh  pyproject.toml  readme.md  requirements.txt  test_corelet_lifecycle.py
.agents/: 00-python-code-agent.txt  01-python-general-instructions.txt  02-python-programming-formats.txt
.cli/: demo_cli_history
.devcontainer/: devcontainer.json  postcreate.sh
.paul/: PROJECT.md  ROADMAP.md  SPECIAL-FLOWS.md  STATE.md
config/: aliases.txt  config.json
demos/: check_credentials.py  debug_smtp.py  deep_debug_smtp.py  demo_cli.py  demo_config.py  demo_dataframe_db.py  demo_email.py  demo_help_alignment.py  demo_kpi.py  demo_kpi_grouping.py  demo_kpi_print.py  demo_logging.py  demo_multiline_input.py  demo_progress.py  demo_rate_limited_http.py  demo_send_email.py  demo_table_renderer.py  demo_table_variants.py  demo_ticked_rate_limit.py  progress_demo.py  test_demo_rate_limited_http.py  test_explicit_from.py  test_send_corrected.py  tqdm_progress.py
demos/.cli/: demo_cli_history
docs/: basefunctions_overview.md
docs/basefunctions/: cli.md  config.md  events.md  http.md  io.md  kpi.md  messaging.md  overview.md  pandas.md  protocols.md  runtime.md  utils.md
docs/cli/: cli_module_guide.md
docs/config/: config_module_guide.md
docs/events/: eventbus_usage_guide.md
docs/io/: io_module_guide.md
docs/kpi/: exporters.md
docs/pandas/: pandas_module_guide.md
docs/runtime/: runtime_module_guide.md
docs/utils/: utils_module_guide.md
example/: __init__.py  demo.py  downloader.py  example.py  example_corelet.py  process_example.py  test.ipynb  threading_example.py
examples/: cached_dataframe_db_load_test.py  caching_example.py  check.py  database_handler_example.py  dataframe_db_example.py  dataframe_db_load_test.py  dataframe_db_performance_example.py  dataframe_db_simple_test.py  db_load_generator.py  db_manager_example.py  db_test_example.py  db_test_load_generator.py  db_test_manager_example.py  db_test_simple_example.py  demo_dataframe_db.py  http_client_example.py  messaging_example.py  messaging_example_cpu.py  messaging_exec_example.py  messaging_test_load_generator.py  messaging_test_simple_example.py  messaging_test_simple_example_ohlcv_all.py  monte_carlo_handlers.py  ohlcv_all.py  redirect_output_test_simple_example.py  task_d.py  test.py  test_dataframes.db  threading_example.py
reports/: coverage.json
src/basefunctions/: __init__.py  config_handler.py  database_handler.py  dataframe.py  datasets.py  decorators.py  eurojackpot.py  filefunctions.py  online.py  threadpool.py  utils.py
temp/: debug_rate_limit.py
templates/config/: aliases.txt  config.json
templates/python_package/: README.md  pyproject.toml  settings.json  test_template.py
templates/python_package/claude/: settings.local.json
templates/python_package/licenses/: neuraldevelopment.license.txt
templates/python_package/package/: __init__.py
templates/python_package/precommit/: pre-commit-config.yaml
templates/python_package/project/: README.md  gitignore  pyproject.toml
templates/python_package/test/: test_template.py
templates/python_package/vscode/: settings.json
tests/: pytest.ini  test_cli_application.py  test_filefunctions.py  test_kpi_exporters.py  test_kpi_utils.py  test_logging.py  test_multiline_input.py  test_sync_pyproject_toml.py  test_version_management.py
tests/cli/: conftest.py  test_argument_parser.py  test_base_command.py  test_cli_application.py  test_command_metadata.py  test_command_registry.py  test_command_registry_lazy.py  test_completion_handler.py  test_config_command.py  test_context_manager.py  test_help_formatter.py  test_output_formatter.py  test_progress_tracker.py
tests/config/: __init__.py  test_config_handler.py  test_secret_handler.py
tests/database/: test_caching_database_handler.py  test_database_error.py  test_database_handler.py  test_database_parameters.py  test_db.py  test_db_config.py  test_db_connection_error.py  test_db_connector.py  test_db_docker_manager.py  test_db_exceptions.py  test_db_factory.py  test_db_instance.py  test_db_manager.py  test_db_transaction_proxy.py  test_mysql_connector.py  test_postgresql_connector.py  test_sqlite_connector.py  test_transaction.py
tests/demos/: __init__.py  test_demo_cli.py  test_demo_table_variants.py
tests/events/: __init__.py  test_corelet_lifecycle.py  test_corelet_lifecycle_simple.py  test_corelet_worker.py  test_event.py  test_event_bus.py  test_event_bus_edge_cases.py  test_event_context.py  test_event_exceptions.py  test_event_factory.py  test_event_handler.py  test_timer_thread.py
tests/http/: test_http_client.py  test_http_client_handler.py
tests/io/: output_redirector.py  test_filefunctions.py  test_output_redirector.py  test_serializer.py
tests/kpi/: conftest.py  test_collector.py  test_exporters.py  test_protocol.py  test_registry.py
tests/messaging/: test_email_message.py  test_event.py  test_event_bus.py  test_event_filter.py  test_event_handler.py  test_observer.py  test_smtp_client.py  test_subscriptions.py
tests/pandas/: test_accessors.py
tests/pandas_accessors/: __init__.py  test_accessors.py
tests/processing/: test_unified_task_pool.py
tests/runtime/: __init__.py  test_venv_utils.py  (+7 more)
(+250 files in other folders)
