[project]
name = "basefunctions"
version = "0.5.11"
description = "A simple framework for base functionalities in Python."
authors = [
    { name="neuraldevelopment", email="neutro2@outlook.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
  "load_dotenv>=0.1",
  "pandas>=2.0",
  "psutil>=7.0",
  "pyyaml>=6.0",
  "requests>=2.32", 
  "tabulate>=0.9",
  "tqdm>=4.67", 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "autopep8>=2.0",
    "black>=24.0",
    "flake8>=7.0",
    "pylint>=3.0",
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"basefunctions" = ["*.py", "**/*.py"]