[project]
name = "basefunctions"
version = "0.5.38"
description = "A simple framework for base functionalities in Python."
authors = [
    { name="neuraldevelopment", email="neutro2@outlook.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
  "load_dotenv>=0.1",
  "msgpack>=1.0",
  "pandas>=2.0",
  "psutil>=7.0",
  "pyyaml>=6.0",
  "requests>=2.32",
  "tabulate>=0.9",
  "tomli>=2.0.0;python_version<'3.11'",
  "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0",
    "pytest-cov>=4.0",

    # Code Quality
    "autopep8>=2.0",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.0",
    "pylint>=3.0",

    # Build Tools
    "build>=1.0",
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"basefunctions" = ["*.py", "**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["templates", ".git", ".venv", "venv", "__pycache__", "*.egg-info"]
addopts = "-v --strict-markers"
