[project]
name = "<package_name>"
version = "0.1.0"
description = "Python package: <package_name>"
authors = [
    { name="neuraldevelopment", email="neutro2@outlook.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"<package_name>" = ["*.py", "**/*.py"]