[project]
name = "<package_name>"
version = "0.0.0"
description = "Python package: <package_name>"
authors = [
    { name="neuraldevelopment", email="neutro2@outlook.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0",
    "pytest-cov>=4.0",

    # Code Quality
    "autopep8>=2.0",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.0",
    "pylint>=3.0",

    # Build Tools
    "build>=1.0",

    # Git Hooks
    "pre-commit>=3.0",
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"<package_name>" = ["*.py", "**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["templates", ".git", ".venv", "venv", "__pycache__", "*.egg-info"]
addopts = "-v --strict-markers"
